--- a/src/Components/mobile-style.css
+++ b/src/Components/mobile-style.css
@@ -25,7 +25,9 @@
         height: 100vh;
         width: 100%;
         background:rgba(0,0,0,0.75);
-        visibility: visible;
+        clip-path:circle(0px at 100% 0%);
+        -webkit-clip-path:(0px at 100% 0%);
+        transition: all 1s ease-out;
     }
     .hamburgerIcon{
         float: right;
