--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -87,7 +87,10 @@ li a:hover{
 .mainNavList{
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width:auto;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 20vh;
 }
 
 .Wrapper{
@@ -292,7 +295,9 @@ button{
         width: 100%;
         margin-top:65px;
         background:rgba(0,0,0,0.75);
-        visibility: hidden;
+        clip-path:circle(0px at 100% 0%);
+        -webkit-clip-path:(0px at 100% 0%);
+        transition: all 1s ease-out;
     }
     .hamburgerIcon{
         float: right;
