--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -16,6 +16,14 @@
         width: 100%;
     }
 }
+@keyframes verticalRotation{
+    0%{
+        transform: rotateY(0deg);
+    }
+    100%{
+        transform: rotateY(360deg);
+    }
+}
 /*Desktop Styling*/
 @media only screen and (min-width:1024px){
 
@@ -151,69 +159,113 @@ p{
     background-image: url("./Media/skillsBg.jpg");
     background-size: cover;
     display: flex;
+    flex-direction: column;
     padding-top: 70px;
     
 }
-.mainCircle{
+.skillsDiv h1{
+    color: white;
+    font-size: 30px;
+}
+.skillsDiv h2{
+    animation:animation 5s;
+    font-family: RowdiesRegular;
+    color: white;
+}
+.mainCircleWeb{
     border-radius: 50%;
-    background:white;
+    background:transparent;
     height:40vh;
     width: 40vh;
-    margin-left: 40vh;
-    margin-top: 23vh;
+    margin-left: 15%;
+    margin-top: 50px;
     display: grid;
     align-items:center;
     justify-items: center;
+    display: '';
+    
 
 }
-.languages{
+.mainCircleML{
+    border-radius: 50%;
+    background:transparent;
+    height:40vh;
+    width: 40vh;
+    margin-left: 15%;
+    margin-top: 50px;
+    display: grid;
+    align-items:center;
+    justify-items: center;
+    display: none; 
 
+}
+.mainCircleText{
     background-color:transparent;
     display: flex;
     height: 100%;
     flex-direction: column;
     grid-area: 1/1/1/1;
+    justify-content: center;
 }
 .miniCircle{
-    background-color:white;
+    background: white;
     border-radius:50%;
-    height: 6vh;
-    width: 6vh;
+    height: 8vh;
+    width: 8vh;
     grid-area: 2/1/1/1;
+}
+.miniCircle img{
+    width: 100%;
+    height: 100%;
+    border-radius:50%;
+}
+.miniCircle img:hover{
+    animation:verticalRotation 2.5s;
+    cursor:text;
+    border:2px solid blue;
 }
 
 .mini1{
-    transform: translate(0,-35vh);
-    background-image: url("./Media/Icons/python_icon.png");
-    background-size: cover;
+    transform: translate(0,-25vh);
 }
 .mini2{
-    transform: translate(-24.74vh,-24.75vh);
-    background-image: url("./Media/Icons/javascript_icon.png");
-    background-size: cover;
+    transform: translate(-17.68vh,-17.68vh);
 }
 .mini3{
-    transform: translate(-35vh,0vh);
-    background-size: cover;
-    background-image: url("./Media/Icons/sql_icon.png");
+    transform: translate(-25vh,0vh);
+
 }
 .mini4{
-    transform: translate(-24.75vh,24.75vh);
-    background-image: url("./Media/Icons/html_icon.png");
-    background-size: cover;
+    transform: translate(-17.68vh,17.68vh);
+
 }
 .mini5{
-    transform: translate(0,35vh);
-    background-size: cover;
-    background-image: url("./Media/Icons/css3_icon.png");
+    transform: translate(0,25vh);
 }
-.lang1{
+.mini6{
+    transform: translate(17.68vh,17.68vh);
+}
+.mini7{
+    transform: translate(25vh,0);
+}
+.mini8{
+    transform: translate(17.68vh,-17.68vh);
+}
+.lang, .skills-nav{
     font-size: 15px;
     margin: 15px 0;
-    color: black;
+    color: white;
 }
-.lang1:hover{
-    cursor: pointer;
+.skills-nav, .contactDiv button {
+    border-radius: 15px;
+    background: white ;
+    border:solid white 2px;
+    color: black;
+    box-shadow: 5px 0 10px 0 ;
+    font-family: "RowdiesRegular";
+}
+.lang:hover{
+    cursor: text;
 }
 
 .projectSection{
