--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -273,32 +273,52 @@ p{
 }
 
 .projectSection{
-    display:flex;
+    min-height: 100%;
     flex-direction: column;
     width:95%;
     margin:10px auto;
     padding-top: 50px;
 }
+.projectCard{
+    box-shadow:2px 3px grey;
+    background-color: white;
+    width: 200px;
+    border-radius: 10px;
+    margin-bottom: 50px;
+}
+.projectCard img{
+    width: 100%;
+    height: 125px;
+    border-radius: 10px;
+}
 .projectCard button{
-    border: 1px blue solid;
+    border: 1px grey solid;
     color: black;
     background-color: white;
 
 }
+.jVJmF{
+    height: auto;
+    min-height: 100%;
+    padding-bottom: 20px;
+}
+.projectCard button:hover{
+    background-color: grey;
+}
 .projectCard:hover{
-    border:2px solid blue;
+    border:2px solid grey;
     border-radius: 12px;
     transform: scale(1);
 }
 .grid_projects{
     display: none;
 }
-.projectSection img{
-    border: groove 10px skyblue;
-    width:200px;
-}
 .projectCard p{
-    font-size: 100%;
+    font-size: 1vw;
+    word-wrap: break-word;
+    height: 50%;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 .projectDetails{
     animation: animation 5s;
@@ -311,7 +331,7 @@ p{
     font-size:20px;    
 }
 .projectsDiv{
-    min-height: calc(100vh - 70px);
+    min-height: 100vh;
     padding-top: 70px;
     font-family: serif;
     display: flex;
