--- a/src/Components/mobile-style.css
+++ b/src/Components/mobile-style.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width:700px){
+@media only screen and (max-width:400px){
     @font-face{
         font-family: rowdiesBold;
         src: url(./Media/fonts/Rowdies/Rowdies-Bold.ttf)
@@ -96,11 +96,10 @@
     }
 
     .skillsDiv{
-        min-height: 125vh;
+        min-height: 100vh;
         background-color: #207FC1;
         display: flex;
         flex-direction: column;
-        padding-top: 50px;
         background-size: cover;
         justify-content: center;
     }
@@ -143,7 +142,7 @@
     .miniCircle{
         background: white;
         border-radius:50%;
-        width: 6vh;
+        width: 6vw;
         height: 6vh;
         grid-area: 2/1/1/1;
     }
@@ -224,7 +223,7 @@
     .Wrapper{
         width: 100%;
         margin:auto auto;
-        min-height: 100vh;
+        min-height: 100%;
         padding-top: 50px;
         background-size:100% 100%;
         background-image: url(./Media/landingPageBGMobile.png);
@@ -306,8 +305,8 @@
         width: 100%;
     }
     .projectsDiv{
-        min-height: 100vh;
-        padding-top: 80px;
+        min-height: 100%;
+        padding-top: 50px;
         font-family: serif;
         display: flex;
         flex-direction:column;
@@ -321,13 +320,13 @@
     }
     
     .contactDiv{
-        padding-top: 80px;
+        padding-top: 50px;
         font-family: serif;
         background-color:#207FC1;
         display: flex;
         flex-direction:column;
         clear:both;
-        min-height: 100vh;
+        min-height: 100%;
     }
     .contactDiv h1{
         color:white;
