--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -257,6 +257,16 @@ p{
     margin: 15px 0;
     color: white;
 }
+.skills-nav{
+    width: 150px;
+    margin: 15px auto;
+}
+.WebButton{
+    display: none;
+}
+.MLButton{
+    display: block;
+}
 .skills-nav, .contactDiv button {
     border-radius: 15px;
     background: white ;
@@ -494,7 +504,7 @@ button{
         list-style: none;
         line-height: 70px;
         margin-top: 30px;
-        font-size: 20px;
+        font-size: 15px;
         
     }
 
@@ -516,102 +526,84 @@ button{
     }
     .skillsDiv{
         min-height: 125vh;
-        background-image:url("./Media/skillsBg.jpg");
-        background-size: 100vw 100vh;
+        background-color: #207FC1;
+        background-size: 100% 100%;
         display: flex;
         flex-direction: column;
-        padding-top: 50px;
-        background-size: cover;
+        background-size: 100% 100%;
         justify-content: center;
         
     }
     .skillsDiv h1{
         color: white;
-        font-size: 30px;
+        font-size: 20px;
+        margin-top: 70px;
     }
     .skillsDiv h2{
         animation:animation 5s;
         font-family: RowdiesRegular;
         color: white;
+        font-size: 18px;
     }
     .mainCircleWeb{
-        border-radius: 50%;
         background:transparent;
         display: grid;
-        margin: auto;
-        align-items:center;
-        justify-items: center;
+        grid-template-columns: 1fr 1fr;
         position: relative;
-        
-    
+        margin:0 auto;
+        width: 90%;
+
     }
     .mainCircleML{
-        border-radius: 50%;
         background:transparent;
-        margin: auto;
-
-        align-items:center;
-        justify-items: center;
         display: none;
+        grid-template-columns: 1fr 1fr;
         position: relative;
-    
+        margin:0 auto;
+        width: 90%;
     }
     .mainCircleText{
         background-color:transparent;
         display: flex;
         height: 100%;
         flex-direction: column;
-        grid-area: 1/1/1/1;
         justify-content: center;
     }
     .miniCircle{
-        background: white;
+        background: transparent;
         border-radius:50%;
-        width: 6vh;
-        height: 6vh;
-        grid-area: 2/1/1/1;
+        margin: 10px auto;
+        width: 8vh;
+        height: 8vh;
+        display: flex;
+        width: 50%;
     }
     .miniCircle img{
-        width: 100%;
         height: 100%;
         border-radius:50%;
+        background-color: white;
     }
     .miniCircle img:hover{
         animation:verticalRotation 2.5s;
         cursor:text;
         border:2px solid blue;
     }
-    
-    .mini1{
-        transform: translate(0,-25vh);
-    }
-    .mini2{
-        transform: translate(-17.68vh,-17.68vh);
-    }
-    .mini3{
-        transform: translate(-25vh,0vh);
-    
-    }
-    .mini4{
-        transform: translate(-17.68vh,17.68vh);
-    
-    }
-    .mini5{
-        transform: translate(0,25vh);
-    }
-    .mini6{
-        transform: translate(17.68vh,17.68vh);
-    }
-    .mini7{
-        transform: translate(25vh,0);
-    }
-    .mini8{
-        transform: translate(17.68vh,-17.68vh);
-    }
-    .lang, .skills-nav{
+    .skills-nav{
         font-size: 70%;
-        margin: 15px 0;
         color:white;
+        width: 100px;
+    }
+    .WebButton{
+        display: none;
+    }
+    .MLButton{
+        display: block;
+    }
+
+    .lang{
+        font-size: 12px;
+        color:white;
+        margin-left: 10%;
     }
     .skills-nav, .contactDiv button {
         border-radius: 15px;
@@ -665,7 +657,7 @@ button{
         font-family: RowdiesRegular;
     }
     .h1{
-        font-size: 30px;
+        font-size: 20px;
         animation-name: animation;
         animation-duration: 5s;
     }
@@ -712,12 +704,12 @@ button{
     .projects-mobile{
         margin: 50px auto;
     }
-    .projectCard p{
-        font-size: 1vw;
+    .projectCard h5{
         word-wrap: break-word;
         height: 50%;
         margin-left: 5px;
         margin-right: 5px;
+        font-weight: bold;
     }
     .projectSection img{
         width: 100%;
@@ -749,6 +741,7 @@ button{
     }
     .contactDiv h1{
         color:white;
+        font-size:20px;
     }
     .contactDiv p{
         width: 70%;
@@ -766,7 +759,7 @@ button{
         display: block;
         margin:0 auto;
         color:black;
-        font-size:25px;
+        font-size:15px;
         margin-top: 1%;
         font-style: italic;
         border-radius: 10px;
@@ -816,7 +809,7 @@ button{
         color: white;
         font-size: medium;
         cursor: pointer;
-        font-size: larger;
+        font-size: 15px;
     }
      @keyframes animation{
          0%{
