--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -592,6 +592,7 @@ button{
         font-size: 70%;
         color:white;
         width: 100px;
+        margin: 15px auto;
     }
     .WebButton{
         display: none;
