modified the mobile nav hamburger
-Fixed the double click bug
-Added an indicator of active menu

--- a/src/Components/mobile-style.css
+++ b/src/Components/mobile-style.css
@@ -33,6 +33,8 @@
         float: right;
         margin:15px 25px;
         height:30px;
+        background-color: transparent;
+        border-radius: 0;
     }
     .topNavMobile{
         width: 100%;
